# safe

./: .gitignore  LICENSE  README.md  completiontypes.py  config.py  func.py  main.py  plugins.py  pyproject.toml  requirements.txt
defmod/: buffers.py  help.py  plugin.py  shell.py
mod/: kanban.py  template.py
