[tool.poetry]
name = "safe"
version = "1.1.7"
description = "A stupid text editor written in python"
authors = ["Spelis <Spelis@duck.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Pygments = "^2.17.2"
pyreadline = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
